[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9.1"
rstest = "0.11.0"
const_format = "0.2.22"
thiserror = "1.0.30"
# rppal = "0.13.1"
openssl = { version = '0.10', features = ["vendored"] }
